@@ -166,6 +166,8 @@ Latest changes:
     * new applet stun-ip (by ralf) determines the external IP address via STUN protocol
 
 - Web interface:
+    * Skin "newfreetz" added
+    * Skins could be preselected via menuconfig
 
 - Other stuff:
 
